# app-queue

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  flake.nix  result-bin
.github/workflows/: update-flake.yaml
.sqlx/: query-0e1c00929c645ef5d33354cd4a866921d7e21202c8da6a247c55d0927aaeb1ec.json  query-11d17880a78ec2c458f604e783f5c1f55b06cc2d16b4564e64940b06e2de422f.json  query-13e8ab253afe682cd7187c458458db49f82376cb1c6e06b52652a3518754e2a9.json  query-1d4b8eed37c60f06e740ec3e699a98479b106b28c33b155e170ecdd5fd7b5111.json  query-1fb3bda1c0696a84fdaa294bdf554c305c12858e6e156e99720d06c0d9614f2f.json  query-2876966fcd6653472e636f941f2c556efa93fc47057e3e0a744119dd5e695712.json  query-424444eb320e75268dcc5958f7e53f32341977a37cd2e14ecf798771ff945dd0.json  query-42c4d5edb877250d89cc8ea1c13456255d5589236759f0e4a5d5d78e68c3cab4.json  query-5761679dacfb94a5c371b325dc78b84ffb10a039fe8a54e1430add0506c99dc6.json  query-79906765c907e2233645592b9bc113d262a85c6bad8c1f7c486d3c13ecd90eb4.json  query-7d194e67d26cf66bc4ed8fe86d5e3dd17123c4a6458eeaf4250bde54e569071a.json  query-88995110f362f55fa932c4ba8cdf1422c74ba6c9fbaab2a4e92ed7b73b344fa6.json  query-a5dc301231fd7b35b2d3a3509adcf00097f22ee66ddc1ba72cf7f3c72f701e56.json  query-afc1e7dd952b7d94408d583e0c8b643746d732b59676559fd899fb59c5345bfb.json  query-c6621784567fbc1b19613f2ea1c7f4b7d0a4b84628ffb95c940bb7c56c068c31.json  query-cca5aa4e7fd29136ae96782016fdf2b97bf172d1dac3ede72914b5419786c86a.json  query-e85c0246a3320c9eba5e55b071eda7e5b56285f402472e323d543487aac6c5ec.json  query-ebbbab30869756ab80991a5b9fa6297d097d7839cb1973ee9c271c5833c8b6dd.json  query-f29aaa8ab76aa617cc06de257deb2289d00a4313ae46280e0af71cb85a81c90e.json
migrations/: 20240504195423_jobs-table.sql
migrations/postgres/: 20240504195423_jobs-table.sql  20240506184142_add-priority-column.sql  20240911065039_add-jobs-priority-run-after-index.sql
migrations/sqlite/: 20240506184142_add-priority-column.sql
src/: db.rs  lib.rs
src/db/: postgres.rs  sqlite.rs
