[package]
name = "app-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
chrono = "0.4.38"
ciborium = "0.2.2"
num_cpus = "1.16.0"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1.37.0", features = ["sync"] }
tracing = "0.1.40"
typetag = "0.2.16"
uuid = { version = "1.8.0", features = ["v4"] }
