[package]
name = "app-queue"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
license = "Apache-2.0"
description = "In-app persistent queue for asynchronous jobs"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "queue", "persistent"]
repository = "https://github.com/DarkKirb/app-queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
chrono = "0.4.38"
ciborium = "0.2.2"
num_cpus = "1.16.0"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1.38.0", features = ["sync", "time"] }
tracing = "0.1.40"
typetag = "0.2.16"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
tracing-subscriber = "0.3.18"
